--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {background: gray}
 
 .header {
+   img src="/RaptorRageblack.png"
    margin: 0px;
    background-color: white;
    padding: 0px;
