--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-body {background: gray}
+body {
+   background: rgb(255,191,191);
+   background: linear-gradient(180deg, rgba(255,191,191,0) 0%, rgba(255,90,90,1) 50%, rgba(204,23,23,1) 100%);
+
+  }
 
 .header {
    img src="/RaptorRageblack.png"
