--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
-background: rgb(255,191,191);
-background: linear-gradient(180deg, rgba(255,191,191,0) 0%, rgba(255,90,90,1) 50%, rgba(204,23,23,1) 100%);
+ background: rgb(195,195,195);
+background: linear-gradient(0deg, rgba(195,195,195,0.844958051580007) 0%, rgba(176,173,173,1) 50%, rgba(84,84,84,1) 100%);
+
+
   }
 
 .header {
