--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
- background: rgb(195,195,195);
-background: linear-gradient(0deg, rgba(195,195,195,0.844958051580007) 0%, rgba(176,173,173,1) 50%, rgba(84,84,84,1) 100%);
+background: rgb(127,63,251);
+background: radial-gradient(circle, rgba(127,63,251,1) 0%, rgba(252,252,70,1) 100%);
 
 
   }
