--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
-background: rgb(87,0,255);
-background: linear-gradient(180deg, rgba(87,0,255,1) 0%, rgba(112,49,226,1) 50%, rgba(252,252,70,1) 100%);
+background: lightgray;
 
 
   }
