--- a/style.css
+++ b/style.css
@@ -1,35 +1,48 @@
-body {
-background: lightgray;
-
-
-  }
-
-.header {
-   margin: 0px;
+body {background: lightgray;
+  .header {
+    padding-top: 1000px;
+   margin-top: 0px;
    background-color: white;
-   padding: 0px;
-   border: 0px solid black;
+   padding: 10px;
+   border: 01px solid black;
    
+  
+}
+
+h1 {
+  font-variant: small-caps;  
+  margin: 0px;
+  font-family: fantasy, sans-serif; 
+  color: yellow;
+  
   
 }
 
 
 p { 
-    
-    color: black;
+    margin: 0px;
+    color: gold;
     font-size: 36px;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-h5 {text-decoration: underline;
-  font-family: Arial
+h5 {
+  margin: 0px;
+  text-decoration: underline;
+  font-family: sans-serif;
   
-}
+  }h2 {
+    font-variant: small-caps;
+    font-family: sans-serif;
+      font-size: 38px;
+  }
 
 h4 {
-  color: white;
+  margin: 0px;
+  color: purple;
   font-size: 20px;
   font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
 }
+
