--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
 body {background: lightgray;}
  
 .header {
-    padding-top: 1000px;
+  
+  width: 802px;
    margin-top: 0px;
    background-color: white;
    padding: 10px;
-   border: 01px solid black;  
+   border: 02px solid black;  
   }
   
 
 
 
-table {width: 100%
+table {width: 825px;
   border: 1px solid black; 
   
 }
@@ -21,7 +22,7 @@ text-align: left;
 }
 td {
   border: 1px solid black; 
-  width: 70%;
+  width: 70%;}
     
 h1 {
   font-variant: small-caps;  
@@ -47,19 +48,35 @@ h5 {
   text-decoration: underline;
   font-family: sans-serif;
   
-  }h2 {
+  }
+  
+  h2 {
     font-variant: small-caps;
     font-family: sans-serif;
+    color: purple;
       font-size: 38px;
-  }
-
+  
   
 }
+
+
+  h6 {
+    font-size: 12px;
+    font-weight: normal;
+    font-family: sans-serif; 
+  }
 
 h4 {
   margin: 0px;
   color: purple;
   font-size: 20px;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+h3{
+  border-top: 0px;
+  color: purple;
+  font-size: 16px;
   font-weight: bold;
   font-family: sans-serif;
 }
