--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ h5 {
   }
   
   h2 {
+   line-height: 10px;
     font-variant: small-caps;
     font-family: sans-serif;
     color: purple;
@@ -74,6 +75,7 @@ h4 {
   font-family: sans-serif;
 }
 h3{
+ line-height: 10px;
   border-top: 0px;
   color: purple;
   font-size: 16px;
