--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {background: lightgray;}
  
 .header {
   
-  width: 802px;
+  width: 50%;
    margin-top: 0px;
    background-color: white;
    padding: 10px;
@@ -12,7 +12,7 @@ body {background: lightgray;}
 
 
 
-table {width: 825px;
+table {width: 50%;
   border: 1px solid black; 
   
 }
@@ -28,7 +28,7 @@ h1 {
   font-variant: small-caps;  
   margin: 0px;
   font-family: fantasy, sans-serif; 
-  color: yellow;
+  color: gold;
   
   
 }
@@ -51,7 +51,7 @@ h5 {
   }
   
   h2 {
-   line-height: 10px;
+   line-height: 5px;
     font-variant: small-caps;
     font-family: sans-serif;
     color: purple;
@@ -62,6 +62,7 @@ h5 {
 
 
   h6 {
+   line-height: 10px;
     font-size: 12px;
     font-weight: normal;
     font-family: sans-serif; 
@@ -75,7 +76,7 @@ h4 {
   font-family: sans-serif;
 }
 h3{
- line-height: 10px;
+ line-height: 5px;
   border-top: 0px;
   color: purple;
   font-size: 16px;
