--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {background: lightgray;}
+body {background: darkgray;}
  
 .header {
   
@@ -42,8 +42,10 @@ p {
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
-
+li {
+ color: white;}
 h5 {
+ color: white;
   margin: 0px;
   text-decoration: underline;
   font-family: sans-serif;
