--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ h5 {
 
 h4 {
   margin: 0px;
-  color: purple;
+  color: yellow;
   font-size: 20px;
   font-weight: bold;
   font-family: sans-serif;
