--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 background: linear-gradient(180deg, rgba(87,0,255,1) 0%, rgba(133,66,255,1) 100%);
   }
 .header {
-  
+  background-image: url("RaptorRageblack.png")
   width: 950px;
    margin-top: 0px;
    background-color: white;
