--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ background: linear-gradient(180deg, rgba(87,0,255,1) 0%, rgba(133,66,255,1) 100%
   }
 .header {
   background-image: url("RaptorRageblack.png");
+  background-size: contain;
   width: 950px;
    margin-top: 0px;
    background-color: white;
