--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ background: linear-gradient(180deg, rgba(87,0,255,1) 0%, rgba(133,66,255,1) 100%
 .header {
   background-image: url("RaptorRageblack.png");
   background-size: contain;
+  background-repeat: no-repeat;
+  background-align: right;
   width: 950px;
    margin-top: 0px;
    background-color: white;
