--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ h5 {
   }
   
   h2 {
+    text-align: right;
    line-height: 5px;
     font-variant: small-caps;
     font-family: sans-serif;
@@ -68,6 +69,7 @@ h5 {
 
 
   h6 {
+    text-align: right;
     color: white;
    line-height: 10px;
     font-size: 13px;
@@ -83,6 +85,7 @@ h4 {
   font-family: sans-serif;
 }
 h3{
+  text-align: right;
  line-height: 5px;
   border-top: 0px;
   color: purple;
