--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ td {
 h1 {
   font-variant: small-caps;  
   margin: 0px;
-  font-family: fantasy, sans-serif; 
+  font-family: Avantgarde, sans-serif; 
   color: gold;
   
   
@@ -50,6 +50,7 @@ li {
  color: white;}
 h5 {
  color: white;
+  font-size: 20px;
   margin: 0px;
   text-decoration: underline;
   font-family: sans-serif;
@@ -60,7 +61,7 @@ h5 {
     text-align: right;
    line-height: 5px;
     font-variant: small-caps;
-    font-family: sans-serif;
+    font-family: Avantgarde, sans-serif;
     color: purple;
       font-size: 38px;
   
@@ -71,8 +72,8 @@ h5 {
   h6 {
     text-align: right;
     color: white;
-   line-height: 10px;
-    font-size: 13px;
+   line-height: 20px;
+    font-size: 15px;
     font-weight: normal;
     font-family: sans-serif; 
   }
