--- a/style.css
+++ b/style.css
@@ -48,7 +48,9 @@ p {
 }
 li {
   font-size: 15px;
- color: white;}
+ color: white;
+font-family: Avantgarde, sans-serif;
+}
 h5 {
  color: white;
   font-size: 17px;
