--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   width: 1050px;
    margin-top: 0px;
    padding: 15px;
-   border: 0px solid black;  
+   border: 1px solid purple;  
   }
   
 
